learm dubbo demo

--- a/dubbo-samples-zookeeper/src/main/resources/spring/dubbo-consumer.properties
+++ b/dubbo-samples-zookeeper/src/main/resources/spring/dubbo-consumer.properties
@@ -16,7 +16,9 @@
 #   limitations under the License.
 #
 #
-
+# <dubbo:application name="zookeeper-demo-provider" />
 dubbo.application.name=zookeeper-demo-consumer
+# <dubbo:registry address="zookeeper://${zookeeper.address:localhost}:2181" />
 dubbo.registry.address=zookeeper://${zookeeper.address:localhost}:2181
+# mist <dubbo:consumer timeout="3000" /> ? 统一设置consumer的超时时间？
 dubbo.consumer.timeout=3000
