--- a/dubbo-samples-zookeeper/src/main/resources/spring/dubbo-provider.properties
+++ b/dubbo-samples-zookeeper/src/main/resources/spring/dubbo-provider.properties
@@ -16,7 +16,10 @@
 #   limitations under the License.
 #
 #
+# <dubbo:application name="zookeeper-demo-provider" />
 dubbo.application.name=zookeeper-demo-provider
+# <dubbo:registry address="zookeeper://${zookeeper.address:localhost}:2181" />
 dubbo.registry.address=zookeeper://${zookeeper.address:localhost}:2181
+# <dubbo:protocal name="dubbo" port="20880" />
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
