learn dubbo config-center features

--- a/dubbo-samples-configcenter/dubbo-samples-configcenter-multi-registries/src/main/resources/spring/dubbo-consumer.properties
+++ b/dubbo-samples-configcenter/dubbo-samples-configcenter-multi-registries/src/main/resources/spring/dubbo-consumer.properties
@@ -18,4 +18,5 @@
 #
 dubbo.application.name=configcenter-multi-registries-consumer
 dubbo.config-center.address=zookeeper://${zookeeper.address:127.0.0.1}:2181
+# mist 把这个配置文件的内容映射到zookeeper的配置中心的路径/dubbo/config/dubbo/dubbo.properties中
 dubbo.config-center.config-file=dubbo.properties
